--- a/selenium-1-signin/lab1-js.html
+++ b/selenium-1-signin/lab1-js.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello There!</h1>
-    <img src="images/bird.png" alt="test image" width="30px">
+    <img src="images/bird.png" alt="Don't worry, you didn't miss anything; it's just an image for test." width="30px">
     <p>Come in, come in! What a nice surprise - I had no idea you would be visiting today. Sorry for the mess in here, I've been building a website. Please - make yourself comfortable.</p>
     <p></p>
     <p>Good, good. Now let's see... where should we begin? Oh, an introduction first.</p>
